feat: scope search suggestions by application
