# docs/swagger.json
@@ -628,6 +628,12 @@
                 "tenant_id"
             ],
             "properties": {
+                "application_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "document_types": {
                     "type": "array",
                     "items": {
